--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = ">=3.8.0,<3.9"
 replit = "^3.2.4"
 Flask = "^2.1.3"
 Flask-AutoIndex = "^0.6.6"
+hurry = "^1.1"
+"hurry.filesize" = "^0.9"
 
 [tool.poetry.dev-dependencies]
 python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
