--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ Flask = "^2.1.3"
 Flask-AutoIndex = "^0.6.6"
 hurry = "^1.1"
 "hurry.filesize" = "^0.9"
+Pygments = "^2.13.0"
+Markdown = "^3.4.1"
 
 [tool.poetry.dev-dependencies]
 python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
